[package]
name = "rslang"
version = "0.1.0"
authors = ["Christopher Pence <chris@pencels.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
codespan-reporting = "0.11.1"
calm_io = "0.1.1"
tempfile = "3.2.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
log = "0.4.14"
env_logger = "0.8.3"
lookahead = "0.1.0"
owned_chars = "0.3.2"